[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eco-server-environment"
version = "1.0.0"
description = "AI-powered environmental restoration environment"
authors = [{name = "Chinmai B"}]
license = {text = "MIT"}
requires-python = ">=3.8"
dependencies = ["openenv-core>=0.2.0"]

[project.scripts]
server = "server.app:app"

[tool.setuptools]
packages = ["server"]
