[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eco-server-environment"
version = "0.1.0"
description = "EcoServer for OpenEnv Hackathon"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0" # <-- This fixes the 'Missing required dependency' error
    # NOTE: If you have other packages in your requirements.txt, list them here too!
]

[project.scripts]
server = "app:main" # <-- This fixes the 'Missing [project.scripts] server entry point' error
