[build-system]
requires = ["setuptools>=45", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "eco-server-environment"
version = "0.1.0"
description = "EcoServer for OpenEnv Hackathon"
requires-python = ">=3.9"
dependencies = [
    "fastapi",
    "uvicorn",
    "openenv-core>=0.2.0" 
]

[project.scripts]
server = "server.app:main"
